--- a/index.css
+++ b/index.css
@@ -2,8 +2,168 @@
     margin:0;
     padding:0;
     font-family: "Montserrat", sans-serif;
-    font-optical-sizing: auto;
-    background-color: black;
+    
+    
     color: white;
     overflow: hidden;
+}
+.container{
+    display: flex;
+    height: 100vh;
+    background-color: black;
+    padding:0.5rem;
+}
+.side-bar{
+    background-color: black;
+    width:350px;
+    border-radius: 1rem;
+    margin-right:0.5rem;
+}
+.main-content{
+    background-color: #121212;
+    flex: 1;
+    border-radius: 1rem;
+    overflow: auto;
+   
+}
+
+.music-player{
+    background-color: black;
+    position: fixed;
+    bottom: 0%;
+   
+    width:100%;
+    height: 72px;
+}
+a{
+    text-decoration: none;
+ 
+}
+.nav{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+    height: 100px;
+    padding:0.5rem 0.75rem;
+
+   
+    background-color: #121212;
+    border-radius: 1rem;
+    
+    
+}
+.nav-option{
+    line-height: 2.5rem;
+    opacity: 0.7;
+    padding:0.5rem 0.75rem;
+}
+.nav-option:hover{
+    opacity: 1;
+}
+.nav-option a{
+    font-size: 1rem;
+    margin-left: 1rem;
+}
+.nav-option i{
+    font-size: 1.2rem;
+    margin-left: 0.7rem;
+}
+.library{
+    background-color: #121212;
+    border-radius: 1rem;
+    height: 100%;
+    margin-top: 0.5rem;
+    padding:0.5rem 0.75rem;
+}
+
+.options{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding:0.5rem 0.5rem;
+}
+.lib-option img{
+    height: 1.25rem;
+    width:1.25rem;
+}
+
+.lib-option a{
+    font-size: 1rem;
+    margin-left: 1rem;
+}
+
+.lib-icons i{
+    line-height: 2.5rem;
+    font-size: 1.25rem;
+    margin-left: 1rem;
+    opacity: 0.7;
+}
+.lib-icons i:hover{
+    opacity:1;
+   
+}
+.box{
+    line-height: 2.3rem;
+    background-color: #242424;
+    height:8rem;
+    border-radius: 0.75rem;
+    padding:1em 1.25rem;
+    
+    margin:0 0 1.2rem 0;
+    
+   
+}
+.box-p1{
+    font-size: 1rem;
+    font-weight: 700;
+    /* margin-bottom: 1rem; */
+}
+.box-p2{
+    font-size: 0.85rem;
+    opacity: 1;
+    font-weight: 500;
+    margin-bottom:0.5rem;
+}
+.badge{
+    border: none;
+    border-radius: 100px;
+    padding:0.25rem 1rem;
+    font-weight: 700;
+    height: 2rem;
+    margin-top:0.5rem;
+    width:fit-content;
+}
+.sticky-nav{
+    position: sticky;
+    top: 0%;
+    background-color: #121212;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding:0.3rem 1rem 1rem 0;
+}
+.sticky-nav-icons{
+   margin-left: 1rem;
+}
+.sticky-nav-icons img{
+    width:1.25rem;
+    height: 1.25rem;
+}
+.sticky-nav-options{
+    /* padding:0.3rem 1rem 1rem 0; */
+    margin-right: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.sticky-nav-options button{
+    margin-right:1rem;
+}
+
+@media (max-width:1000px)
+{
+    .hide{
+       display: none;
+    }
 }
