--- a/index.css
+++ b/index.css
@@ -24,7 +24,8 @@
     flex: 1;
     border-radius: 1rem;
     overflow: auto;
-   
+    padding:0 1.5rem 0 1.5rem;
+
 }
 
 .music-player{
@@ -33,7 +34,7 @@
     bottom: 0%;
    
     width:100%;
-    height: 72px;
+    height: 80px;
 }
 a{
     text-decoration: none;
@@ -142,9 +143,10 @@ a{
     justify-content: space-between;
     align-items: center;
     padding:0.3rem 1rem 1rem 0;
+    z-index: 5;
 }
 .sticky-nav-icons{
-   margin-left: 1rem;
+   /* margin-left: 1rem; */
 }
 .sticky-nav-icons img{
     width:1.25rem;
@@ -166,4 +168,126 @@ a{
     .hide{
        display: none;
     }
+}
+.card-container{
+    display: flex;
+    align-items: center;
+    flex-wrap:wrap;
+   
+}
+.card{
+    background-color: #232323;  
+    width:150px;
+    border-radius: 0.5rem;
+    padding:1rem;
+    margin-top: 1.25rem;
+    margin-bottom: 1.5rem;
+    margin-right:1.2rem;
+
+}
+
+.card-img{
+    width:100%;
+    border-radius: 0.5rem;
+  
+}
+.card-title{
+    font-weight: 600;
+    padding:0.5rem 0.5rem 0.5rem 0;
+}
+.card-info{
+    font-size: 0.75rem;
+    opacity: 0.5;
+}
+.footer{
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0.5 ;
+}
+.line{
+    width:100%;
+    height: 20%;
+    border-top: 1px solid white;
+}
+.music-player{
+    display: flex;
+}
+.music-player .album{
+    width:25%;
+    display: flex;
+   
+   padding:0.75rem;
+
+}
+.album .album-img{
+    border-radius: 0.5rem;
+    margin-right:1rem;
+}
+.album-name{
+    padding:0.5rem;
+    line-height: 1.25rem;
+}
+
+.album-title{
+    font-weight: 600;
+    font-size:0.9rem;
+}
+.album-info{
+    font-size:0.7rem;
+    opacity: 0.7;
+}
+.album-icon i{
+   
+  margin-top: 1.2rem;
+}
+.player{
+    width:50%;
+
+}
+.player-controls{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.player-controls .player-control-icon{
+    width:1rem;
+    height: 1rem;
+    margin:0.5rem 0.75rem 0.5rem 0.75rem;
+    opacity: 0.7;
+
+}
+.player-control-icon:hover{
+    opacity:1;
+}
+.playback-bar{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.playback-bar .progress-bar{
+    width:70%;
+    appearance: none;
+    cursor: pointer;
+    background-color: transparent;
+}
+
+.progress-bar::-webkit-slider-runnable-track{
+    background-color: #ddd;
+    border-radius: 100px;
+    height: 0.2rem;
+}
+.progress-bar::-webkit-slider-thumb{
+    appearance: none;
+    margin: -0.5rem;
+    height: 2rem;
+    width:1rem;
+    background-color: #1bd760;
+    border-radius: 50%;
+    
+}
+.controls{
+    width:25%;
 }
